k8s/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-detection-deployment
  labels:
    app-label: fraud-detection-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app-label: fraud-detection-deployment
  template:
    metadata:
      labels:
        app-label: fraud-detection-deployment
    spec:
      containers:
      - name: fraud-detection-deployment
        image: cr.yandex/crp74krcf372jh05bpl8/fraud:v1
        ports:
        - containerPort: 8000
