k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: fraud-detection
  labels:
    app-label: fraud-detection-deployment
spec:
  ports:
    - port: 8000
      name: plaintext
      targetPort: 8000
  selector:
    app-label: fraud-detection-deployment
  type: LoadBalancer
