k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-service
  labels:
    app: fraud-detection
spec:
  selector:
    # app.kubernetes.io/name: predictor
    app: fraud-detection
  ports:
    - name: port
      protocol: TCP
      port: 8000
    - name: port1
      protocol: TCP
      port: 8001
